add generic whatsapp msg

--- a/src/languages/content-ar.json
+++ b/src/languages/content-ar.json
@@ -67,7 +67,7 @@
       {
         "name": "مشروبات 🥤",
         "image": "images/drinks.jpeg",
-        "desc": "קולה זירו, ספריט, שוייפס, קולה רגיל ועוד",
+        "desc": "كولا عادي/زيرو، سبرايت شويبس والمزيد",
         "products": [
            {
               "name": "كولا",
@@ -110,6 +110,14 @@
            }
         ]
      }
-     ]
+     ],
+     "whatsappDetails":{
+      "ownerPhone":"+9720532321265",
+      "wspMsgStart":"مرحبا، دوصي على",
+      "specialNotes":"ملاحظات مهمه",
+      "shareBtn":"شارك",
+      "orderBtn":"اطلب",
+      "placeholder":"عندك اي ملاحظات?"
+     }
     
 }
